Implemented category page

--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -4,22 +4,68 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
-    <h1>Create you account</h1>
-    <form id="registrationForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required><br><br>
-        
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        
-        <button type="button" onclick="registerUser()">Register</button>
-    </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white p-4">
+        <div class="container-fluid">
+            <a class="navbar-brand font-weight-bold" href="#">Ecommerce</a>
+    
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="#">Categories</a>
+                    <a class="nav-link" href="#">Sale</a>
+                    <a class="nav-link" href="#">Clearance</a>
+                    <a class="nav-link" href="#">New stock</a>
+                    <a class="nav-link" href="#">Trending</a>
+                </div>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-4 shadow-lg border p-4">
+                <h4 class="text-center">Create your account</h4>
+                <div class="mb-3">
+                    <label for="name" class="form-label">Name</label>
+                    <input type="text" class="form-control" id="name" placeholder="Enter your name" required="required">
+                </div>
+    
+                <div class="mb-3">
+                    <label for="email" class="form-label">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="name@example.com">
+                </div>
+    
+                <div class="mb-3">
+                    <label for="password" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Enter your password">
+                </div>
+    
+                <div class="mb-3 text-center">
+                    <button type="submit" class="btn btn-dark btn-block px-5 text-sm" onclick="registerUser()">CREATE ACCOUNT</button>
+                </div>
 
+                <div class="mb-3 text-center">
+                    <span> Have an account? 
+                        <a href="login">Login</a>
+                    </span>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
         const registerUser = async () => {
             try {
