--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,20 +5,61 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
     <!-- <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
-    <h1>Login</h1>
-    <h2>Welcome back to Ecommerce</h2>
-    <h4>The next gen business marketplace</h4>
-    <form id="loginForm">        
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required><br><br>
-        
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required><br><br>
-        
-        <button type="button" onclick="loginUser()">Login</button>
-    </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand font-weight-bold" href="#">Ecommerce</a>
+    
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link me-3" aria-current="page" href="#">Categories</a>
+                    <a class="nav-link me-3" href="#">Sale</a>
+                    <a class="nav-link me-3" href="#">Clearance</a>
+                    <a class="nav-link me-3" href="#">New stock</a>
+                    <a class="nav-link" href="#">Trending</a>
+                </div>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link me-3" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+        </div>
+    </nav>
+    
+    <div class="container mt-4">
+        <div class="row justify-content-center">
+            <div class="col-md-5 shadow-lg border rounded p-4">
+                <div class="mb-4">
+                    <h4 class="text-center fw-bold">Login</h4>
+                    <h5 class="text-center mt-4">Welcome back to Ecommerce </h5>
+                    <p class="text-center">The next gen business marketplace</p>
+                </div>
+                <form id="loginForm">
+                    <div class="mb-3">
+                        <label for="email" class="form-label">Email address</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+                    </div>
+                    <div class="mb-3">
+                        <label for="password" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="password" placeholder="Enter your password" required>
+                    </div>
+                    <div class="mb-4">
+                        <button type="button" class="btn btn-dark btn-block mt-3 col-md-12" onclick="loginUser()">Login</button>
+                    </div>
+                    <hr>
+                    <div class="mb-3">
+                        <p class="text-center">Don't have an account? <a href="signup">  SIGN UP</a></p>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <script>
         const loginUser = async () => {
