--- a/src/views/emailVerification.ejs
+++ b/src/views/emailVerification.ejs
@@ -4,16 +4,49 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Email Verification</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+
 </head>
 <body>
-    <h2>Email Verification</h2>
-    <p>Please enter the OTP sent to your email.</p>
-    <form id="verificationForm">
-        <label for="otp">OTP:</label>
-        <input type="text" id="otp" name="otp" required><br><br>
-        
-        <button type="button" onclick="verifyEmail()">Verify</button>
-    </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white p-3 shadow-sm">
+        <div class="container-fluid">
+            <a class="navbar-brand font-weight-bold" href="#">Ecommerce</a>
+    
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    <a class="nav-link me-3" aria-current="page" href="#">Categories</a>
+                    <a class="nav-link me-3" href="#">Sale</a>
+                    <a class="nav-link me-3" href="#">Clearance</a>
+                    <a class="nav-link me-3" href="#">New stock</a>
+                    <a class="nav-link" href="#">Trending</a>
+                </div>
+            </div>
+            <div class="navbar-nav">
+                <a class="nav-link me-3" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
+                <a class="nav-link" href="#"><i class="fas fa-shopping-cart"></i></a>
+            </div>
+        </div>
+    </nav>    
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="col-md-5 shadow-lg border rounded p-4">
+                <div>
+                <h4 >Email Verification</h4>
+                <p>Please enter the OTP sent to your email.</p>
+                <form id="verificationForm">
+                    <label for="otp">OTP:</label>
+                    <input type="text" id="otp" name="otp" required><br><br>
+                    
+                    <button type="button" onclick="verifyEmail()">Verify</button>
+                </form>
+            </div>
+        </div>
+    </div>
+    </div>
 
     <script>
         async function verifyEmail() {
